--- a/dbinspector/src/main/res/values/colors.xml
+++ b/dbinspector/src/main/res/values/colors.xml
@@ -9,8 +9,10 @@
     <color name="dbinspector_splitter_dragging_background">#35000000</color>
     <color name="dbinspector_color_keyword_sql_keyword">#008ac0</color>
     <color name="dbinspector_color_keyword_sql_function">#EB8258</color>
-    <color name="dbinspector_color_keyword_sql_type">#CE2D4F</color>
+    <color name="dbinspector_color_keyword_sql_type">#CC2E28</color>
     <color name="dbinspector_color_keyword_table_name">#7b71c2</color>
+    <color name="dbinspector_color_keyword_view_name">#8E23A9</color>
+    <color name="dbinspector_color_keyword_trigger_name">#BB3A8C</color>
     <color name="dbinspector_color_keyword_column_name">#abc96a</color>
     <color name="dbinspector_color_keyword_background">#aaaaaa</color>
 </resources>
