--- a/dbinspector/src/main/res/layout/dbinspector_activity_databases.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_databases.xml
@@ -14,7 +14,8 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
             app:menu="@menu/dbinspector_database"
             app:subtitle="@string/dbinspector_databases"
             app:title="@string/dbinspector_name" />
