--- a/dbinspector/src/main/res/layout/dbinspector_activity_edit_database.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_edit_database.xml
@@ -13,7 +13,8 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
             app:navigationIcon="?attr/homeAsUpIndicator"
             app:title="@string/dbinspector_edit" />
 
