--- a/dbinspector/src/main/res/layout/dbinspector_activity_schema.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_schema.xml
@@ -15,7 +15,8 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
             app:menu="@menu/dbinspector_schema"
             app:navigationIcon="?attr/homeAsUpIndicator"
             app:title="@string/dbinspector_schema" />
