--- a/dbinspector/src/main/res/layout/dbinspector_activity_settings.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_settings.xml
@@ -18,7 +18,7 @@
             android:minHeight="?attr/actionBarSize"
             app:navigationIcon="?attr/homeAsUpIndicator"
             app:subtitle="@string/dbinspector_action_settings"
-            app:title="@string/dbinspector_name" />
+            app:title="@string/dbinspector_launcher_name" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
