--- a/dbinspector/src/main/res/layout/dbinspector_item_execution.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_item_execution.xml
@@ -1,20 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
+    android:minHeight="?attr/listPreferredItemHeight"
     android:orientation="vertical"
-    android:padding="4dp">
+    android:paddingStart="16dp"
+    android:paddingTop="8dp"
+    android:paddingEnd="16dp"
+    android:paddingBottom="8dp">
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/valueView"
-        style="@style/TextAppearance.MaterialComponents.Body1"
+        android:id="@+id/timeView"
+        style="@style/TextAppearance.MaterialComponents.Caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="?attr/listPreferredItemHeight"
-        android:paddingStart="2dp"
-        android:paddingEnd="2dp" />
+        android:gravity="end"
+        tools:text="22.02.2012 00:27" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/successView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:src="@drawable/dbinspector_ic_fail" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/valueView"
+            style="@style/TextAppearance.MaterialComponents.Body1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            tools:text="SELECT * FROM users" />
+
+    </LinearLayout>
 
 </LinearLayout>
