--- a/dbinspector/src/main/res/layout/dbinspector_dialog_history.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_dialog_history.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
+            app:menu="@menu/dbinspector_history"
             app:navigationIcon="@drawable/dbinspector_ic_close" />
 
     </com.google.android.material.appbar.AppBarLayout>
