--- a/dbinspector/src/main/res/values-night/colors.xml
+++ b/dbinspector/src/main/res/values-night/colors.xml
@@ -7,4 +7,5 @@
     <color name="dbinspector_color_keyword_background">#323232</color>
     <color name="dbinspector_color_fail">#d32f2f</color>
     <color name="dbinspector_color_success">#388e3c</color>
+    <color name="dbinspector_color_remove">#d50000</color>
 </resources>
