--- a/dbinspector/src/main/res/values/colors.xml
+++ b/dbinspector/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="dbinspector_color_keyword_background">#aaaaaa</color>
     <color name="dbinspector_color_fail">#f44336</color>
     <color name="dbinspector_color_success">#4caf50</color>
+    <color name="dbinspector_color_remove">#ff1744</color>
 </resources>
