Add bottom margin on history list.

--- a/dbinspector/src/main/res/layout/dbinspector_dialog_history.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_dialog_history.xml
@@ -26,6 +26,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="?attr/actionBarSize"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
