Fix Lint issues.

--- a/dbinspector/src/main/res/layout-land/dbinspector_activity_edit.xml
+++ b/dbinspector/src/main/res/layout-land/dbinspector_activity_edit.xml
@@ -39,7 +39,8 @@
             android:fillViewport="true"
             android:overScrollMode="never"
             android:paddingEnd="8dp"
-            android:scrollbars="vertical">
+            android:scrollbars="vertical"
+            tools:ignore="RtlSymmetry">
 
             <FrameLayout
                 android:layout_width="match_parent"
