--- a/dbinspector/src/main/res/layout/dbinspector_item_cell.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_item_cell.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
     android:orientation="vertical"
-    android:padding="4dp">
+    android:padding="4dp"
+    tools:ignore="UnusedAttribute">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/valueView"
