--- a/dbinspector/src/main/res/layout/dbinspector_item_execution.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_item_execution.xml
@@ -11,13 +11,15 @@
     android:paddingStart="16dp"
     android:paddingTop="8dp"
     android:paddingEnd="16dp"
-    android:paddingBottom="8dp">
+    android:paddingBottom="8dp"
+    tools:ignore="UnusedAttribute">
 
     <ImageView
         android:id="@+id/successView"
-        android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:importantForAccessibility="no"
         tools:src="@drawable/dbinspector_ic_fail" />
 
     <LinearLayout
