--- a/dbinspector/src/main/res/layout/dbinspector_item_schema.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_item_schema.xml
@@ -17,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:importantForAccessibility="no"
         android:src="@drawable/dbinspector_ic_table" />
 
     <com.google.android.material.textview.MaterialTextView
