--- a/dbinspector/src/main/res/layout/dbinspector_layout_empty.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_layout_empty.xml
@@ -12,6 +12,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:importantForAccessibility="no"
         android:src="@drawable/dbinspector_empty" />
 
     <com.google.android.material.textview.MaterialTextView
