--- a/dbinspector/src/main/res/layout/dbinspector_layout_image_preview.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_layout_image_preview.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
@@ -14,6 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
+        android:importantForAccessibility="no"
         android:scaleType="fitCenter" />
 
     <com.google.android.material.textview.MaterialTextView
