Code inspection cleanup.

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -27,7 +27,8 @@
             android:id="@+id/show"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Run" />
+            android:text="Run"
+            tools:ignore="HardcodedText" />
 
     </LinearLayout>
 
